--- a/redux1/package.json
+++ b/redux1/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "todo2",
+  "name": "redux1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajax": "0.0.4",
-    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
